# cmake-docker-demo

./: CMakeLists.txt  Dockerfile  README.md
